add updated handlers
