# restapi/operations/mounts/unmount_rbd_responses.go
@@ -13,14 +13,14 @@ import (
 	"github.com/jlowellwofford/imageapi/models"
 )
 
-// UnmountRbdNoContentCode is the HTTP code returned for type UnmountRbdNoContent
-const UnmountRbdNoContentCode int = 204
+// UnmountRbdOKCode is the HTTP code returned for type UnmountRbdOK
+const UnmountRbdOKCode int = 200
 
-/*UnmountRbdNoContent Unmounted
+/*UnmountRbdOK Unmounted
 
-swagger:response unmountRbdNoContent
+swagger:response unmountRbdOK
 */
-type UnmountRbdNoContent struct {
+type UnmountRbdOK struct {
 
 	/*
 	  In: Body
@@ -28,27 +28,27 @@ type UnmountRbdNoContent struct {
 	Payload *models.MountRbd `json:"body,omitempty"`
 }
 
-// NewUnmountRbdNoContent creates UnmountRbdNoContent with default headers values
-func NewUnmountRbdNoContent() *UnmountRbdNoContent {
+// NewUnmountRbdOK creates UnmountRbdOK with default headers values
+func NewUnmountRbdOK() *UnmountRbdOK {
 
-	return &UnmountRbdNoContent{}
+	return &UnmountRbdOK{}
 }
 
-// WithPayload adds the payload to the unmount rbd no content response
-func (o *UnmountRbdNoContent) WithPayload(payload *models.MountRbd) *UnmountRbdNoContent {
+// WithPayload adds the payload to the unmount rbd o k response
+func (o *UnmountRbdOK) WithPayload(payload *models.MountRbd) *UnmountRbdOK {
 	o.Payload = payload
 	return o
 }
 
-// SetPayload sets the payload to the unmount rbd no content response
-func (o *UnmountRbdNoContent) SetPayload(payload *models.MountRbd) {
+// SetPayload sets the payload to the unmount rbd o k response
+func (o *UnmountRbdOK) SetPayload(payload *models.MountRbd) {
 	o.Payload = payload
 }
 
 // WriteResponse to the client
-func (o *UnmountRbdNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+func (o *UnmountRbdOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.WriteHeader(204)
+	rw.WriteHeader(200)
 	if o.Payload != nil {
 		payload := o.Payload
 		if err := producer.Produce(rw, payload); err != nil {
